# SimpleDNS

./: CMakeLists.txt  Config.h  DnsServer.h  Header.cpp  Message.cpp  Name.cpp  Network.cpp  Question.cpp  Resolver.cpp  ResourceRecord.cpp  main.cpp  readme.md
